crates/alba-shell/src/snapshots/alba_shell__lexer__tests__rejects_background_jobs.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "err(\"watch & build\").render(\"watch & build\")"
---
error: background jobs (`&`) are not supported
  │ watch & build
  │       ^
  = help: the engine already parallelizes beams; run one command per `run` entry
