crates/alba-shell/src/snapshots/alba_shell__lexer__tests__rejects_backquote_substitution.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "err(\"echo `date`\").render(\"echo `date`\")"
---
error: backquote command substitution is not supported
  │ echo `date`
  │      ^
  = help: use `$(...)` instead
