crates/alba-shell/src/snapshots/alba_shell__lexer__tests__rejects_brace_expansion.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "err(\"touch f.{rs,md}\").render(\"touch f.{rs,md}\")"
---
error: brace expansion is not supported
  │ touch f.{rs,md}
  │         ^^^^^^^
  = help: spell the alternatives out as separate arguments
