crates/alba-shell/src/snapshots/alba_shell__lexer__tests__rejects_heredocs.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "err(\"cat << EOF\").render(\"cat << EOF\")"
---
error: heredocs are not supported
  │ cat << EOF
  │     ^^
  = help: move the logic into a script invoked by `run`, or declare `executor system_shell` on this beam
