crates/alba-shell/src/snapshots/alba_shell__lexer__tests__rejects_the_positional_parameter_lists-2.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "err(\"echo $@\").render(\"echo $@\")"
---
error: the special parameter `$@` is not supported
  │ echo $@
  │      ^^
  = help: move the logic into a script invoked by `run`, or declare `executor system_shell` on this beam
