crates/alba-shell/src/snapshots/alba_shell__lexer__tests__rejects_unclosed_command_substitution.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "err(\"echo $(true\").render(\"echo $(true\")"
---
error: unclosed command substitution
  │ echo $(true
  │      ^^
