crates/alba-shell/src/snapshots/alba_shell__lexer__tests__rejects_unclosed_double_quote.snap
---
source: crates/alba-shell/src/lexer.rs
expression: "err(\"echo \\\"oops\").render(\"echo \\\"oops\")"
---
error: unclosed double quote
  │ echo "oops
  │      ^
